Test(ChatRoomService): ChatRoomService 테스트 추가